Fix layout issues on smaller screens
On the 1080p big screen, 600px is reasonable - 32% of the width - but on
a screen like the foyer display at 1024x768, that is over half the width.
Setting the max-width to 40% seems to be a better compromise.

--- a/templates/default/css/slideshow.css
+++ b/templates/default/css/slideshow.css
@@ -157,7 +157,7 @@ div.tellus {
 }
 
 .timedorbit-slide img.article {
-    max-width: 600px !important;
+    max-width: 40% !important;
 }
 
 .timedorbit-slide.type0 {
